--- a/app/views/stalker/stalker.html.erb
+++ b/app/views/stalker/stalker.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @s.u.name %> <small><%= link_to 'SG', @s.u.sg_url %>, <%= link_to 'Steam', @s.u.steam_url %></small></h1>
+<h1>Friends of <%= @s.u.name %> <small><%= link_to 'SG', @s.u.sg_url %>, <%= link_to 'Steam', @s.u.steam_url %></small></h1>
 
 <ul>
 <% @s.friends.each do |f| %>
